--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -4,21 +4,22 @@ empty.bookDataFormData.yearOfPublication=Year is mandatory
 empty.bookDataFormData.edition=Edition is mandatory
 empty.bookDataFormData.author=Author is mandatory
 empty.bookDataFormData.isbn=ISBN is mandatory
-notvalid.bookDataFormData.edition=Edition is not valid
-notvalid.bookDataFormData.isbn=ISBN is not valid
-notvalid.bookDataFormData.yearOfPublication=Year is not valid
-invalid.length.bookDataFormData.yearOfPublication=Year is not valid
+notvalid.bookDataFormData.edition=Please enter a numeric value.
+notvalid.bookDataFormData.isbn=Please enter a valid ISBN.
+notvalid.bookDataFormData.yearOfPublication=Please enter a four-digit year.
+invalid.length.bookDataFormData.yearOfPublication=Please enter a four-digit year.
 
 # Borrow book form
-notvalid.borrowCmd.isbn=ISBN is not valid
+notvalid.borrowCmd.isbn=Please enter a valid ISBN.
 empty.borrowCmd.isbn=ISBN is mandatory
-notvalid.borrowCmd.email=Email is not valid
+notvalid.borrowCmd.email=Please enter a valid Email.
 empty.borrowCmd.email=Email is mandatory
 
 # Return all books form
 empty.returnAllBookFormData.emailAddress=Email is mandatory
-notvalid.returnAllBookFormData.emailAddress=Email is not valid
+notvalid.returnAllBookFormData.emailAddress=Please enter a valid Email.
+notvalid.returnAllBookFormData.isbn=Please enter a valid ISBN.
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=ISBN is not valid
+de.codecentric.psd.worblehat.web.validation.ISBN=Please enter a valid ISBN.
 de.codecentric.psd.worblehat.web.validation.Numeric=Value has to be numeric
