better isbn message

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -5,12 +5,12 @@ empty.bookDataFormData.edition=Edition is mandatory
 empty.bookDataFormData.author=Author is mandatory
 empty.bookDataFormData.isbn=ISBN is mandatory
 notvalid.bookDataFormData.edition=Please enter a numeric value.
-notvalid.bookDataFormData.isbn=Please enter a valid ISBN.
+notvalid.bookDataFormData.isbn=Please enter a valid 10 characters ISBN.
 notvalid.bookDataFormData.yearOfPublication=Please enter a four-digit year.
 invalid.length.bookDataFormData.yearOfPublication=Please enter a four-digit year.
 
 # Borrow book form
-notvalid.borrowCmd.isbn=Please enter a valid ISBN.
+notvalid.borrowCmd.isbn=Please enter a valid 10 characters ISBN.
 empty.borrowCmd.isbn=ISBN is mandatory
 notvalid.borrowCmd.email=Please enter a valid Email.
 empty.borrowCmd.email=Email is mandatory
@@ -18,8 +18,8 @@ empty.borrowCmd.email=Email is mandatory
 # Return all books form
 empty.returnAllBookFormData.emailAddress=Email is mandatory
 notvalid.returnAllBookFormData.emailAddress=Please enter a valid Email.
-notvalid.returnAllBookFormData.isbn=Please enter a valid ISBN.
+notvalid.returnAllBookFormData.isbn=Please enter a valid 10 characters ISBN.
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=Please enter a valid ISBN.
+de.codecentric.psd.worblehat.web.validation.ISBN=Please enter a valid 10 characters ISBN.
 de.codecentric.psd.worblehat.web.validation.Numeric=Value has to be numeric
